--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "textual-nerv"
 version = "0.1.0"
-description = "NERV theme for Textual applications - Evangelion-inspired orange/black aesthetic"
+description = "NERV theme for Textual applications - Evangelion-inspired aesthetic"
 readme = "README.md"
 license = "MIT"
 requires-python = ">=3.8"
@@ -25,6 +25,8 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Topic :: Terminals",
 ]
 dependencies = [
